edition the form section and footer

--- a/index.html
+++ b/index.html
@@ -195,10 +195,10 @@
   <a><img src="images/a6.jpg" id="pic"></a>
   <h3>InstaBrain: The New Rules for Marketing to Gen Z</h3>
 </div>
-<a href="signin.html"><button class="donate5">SEE ALL EVENTS</button></a>
-<a href="signin.html"><button class="donate5">SEE ALL EVENTS</button></a>
+<a href="signin.html"><button class="donate8">SEE ALL EVENTS</button></a>
+<a href="signin.html"><button class="donate8">SEE ALL EVENTS</button></a>
 <a href="signin.html"><button class="donate6">VIEW RESOURCE FULL CENTER</button></a>
-<a href="signin.html"><button class="donate5">SEE ALL EVENTS</button></a>
+<a href="signin.html"><button class="donate8">SEE ALL EVENTS</button></a>
 </div>
 </div>
 <div class="health">
@@ -275,7 +275,38 @@
 <div class="box5">
 <a><img src="images/se.png" id="pic"></a>
 </div>
+<div class="box5">
+<a><img src="images/se.png" id="pic1"></a>
 </div>
+<div class="box5">
+<a><img src="images/se.png" id="pic1"></a>
+</div>
+<div class="box5">
+<a><img src="images/se.png" id="pic1"></a>
+</div>
+<div class="box5">
+<a><img src="images/se.png" id="pic1"></a>
+</div>
+<a href="signin.html"><button class="donate8">SEE ALL EVENTS</button></a>
+<a href="signin.html"><button class="donate7">SPONSORSHIP INFO</button></a>
+<a href="signin.html"><button class="donate8">SEE ALL EVENTS</button></a>
+</div>
+</div>
+<div class="form">
+    <h3>Sign up to get the latest announcements, updates, discounts and more!</h3>
+    <div class="input-group">
+        <input type="text" class="form-control" aria-describedby="basic-addon1" placeholder="First Name*">
+    </div>
+    <div class="input-group">
+        <input type="text" class="form-control" aria-describedby="basic-addon1" placeholder="Last Name*">
+    </div>
+    <div class="input-group">
+        <input type="email" class="form-control" aria-describedby="basic-addon1" placeholder="Email Address*">
+    </div>
+    <div class="input-group">
+    <a href="signin.html"><button class="donate9">SIGN ME UP</button></a>
+    </div>
+    <p>By clicking "SIGN ME UP" I acknowledge that I have read and I accept the Digital Summit Privacy Policy</p>
 </div>
         </main>
   </body>
