editing of the width of the webpage

--- a/index.html
+++ b/index.html
@@ -5,13 +5,11 @@
     <meta name="viewport" content="width=device-width , initial-scale=1">
     <link rel="stylesheet" href="style.css" type="text/css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="bootstrap.css">
   </head>
   <body>
       <header>
         <div class="flex-container">
-            <a href="index.html"><img src="images\logo.pn" id="scheme"></a>
-            <a href="index-menu.html"><img src="images\menu.svg" id="deem"></a>
+            <a href="index.html"><img src="images\logo.png" id="scheme"></a>
                 <div>
                 <ul>
                     <li><a href="#">Conferences</a></li>
@@ -23,7 +21,6 @@
                 </div>
             </div>
     </header>
-      <main>
               <div class="support">
                   <div class="support1">
                  <h2 class="h2s">The Digital Community Lives Here</h2>
@@ -66,7 +63,7 @@
 </div>
 </div>
 </div>
-<div class="health4">
+<div class="health41">
     <h2 class="health9">Upcoming Events</h2>
 <div class="container1">
     <div class="box1">
@@ -90,36 +87,6 @@
     <a href="signin.html"><button class="donate5">SEE ALL EVENTS</button></a>
     <a href="signin.html"><button class="donate3">SEE ALL EVENTS</button></a>
     <a href="signin.html"><button class="donate5">SEE ALL EVENTS</button></a>
-</div>
-</div>
-<div class="health4">
-    <h2 class="health9">What Will You Learn?</h2>
-   <p>The agendas for Digital Summits are built for today’s hottest topics. The world of digital marketing is ever-evolving and we bring awesome speakers to help you learn the latest. Below is an example of the most popular topics.</p>
-<div class="container1">
-    <div class="box4">
-    <a><img src="images/6.jpg" id="pic"></a>
-</div>
-<div class="box4">
-<a><img src="images/6.jpg" id="pic"></a>
-</div>
-<div class="box4">
-<a><img src="images/6.jpg" id="pic"></a>
-</div>
-<div class="box4">
-<a><img src="images/6.jpg" id="pic"></a>
-</div>
-<div class="box4">
-<a><img src="images/6.jpg" id="pic"></a>
-</div>
-<div class="box4">
-<a><img src="images/6.jpg" id="pic"></a>
-</div>
-<div class="box4">
-<a><img src="images/6.jpg" id="pic"></a>
-</div>
-<div class="box4">
-<a><img src="images/6.jpg" id="pic"></a>
-</div>
 </div>
 </div>
 <div class="health4">
@@ -163,7 +130,7 @@
 </div>
 </div>
 </div>
-<div class="health4">
+<div class="health5">
     <h2 class="health0">This is some of the great content in our Resource Center</h2>
     <p>Learn from experts in digital marketing with access to the content in our Resource Library, including guest articles as well as content from our Summits.</p>
 <div class="container1">
@@ -201,7 +168,7 @@
 <a href="signin.html"><button class="donate8">SEE ALL EVENTS</button></a>
 </div>
 </div>
-<div class="health">
+<div class="health21">
     <h2 class="health1">Past Luminaries & Thought Leaders</h2>
 <div class="container1">
     <div class="box6">
@@ -308,6 +275,13 @@
     </div>
     <p>By clicking "SIGN ME UP" I acknowledge that I have read and I accept the Digital Summit Privacy Policy</p>
 </div>
-        </main>
+<div class="base">
+    <img src="images/logo2.png">
+    <h3>Registration & General Questions</h3>
+    <p>(919) 529-5373 |<a> registration@digitalsummit.com</a></p>
+    <h3>Sponsorship Information</h3>
+    <p>(650) 549-5151 |<a> roi@digitalsummit.com</a></p>
+    <p>Privacy Policy |<a> Code Of Conduct</a></p>
+</div>
   </body>
 </html>
