editing the mobile version

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       <header>
         <div class="flex-container">
             <a href="index.html"><img src="images\logo.png" id="scheme"></a>
+            <a href="index-menu.html"><img src="images\menu.svg" id="deem"></a>
                 <div>
                 <ul>
                     <li><a href="#">Conferences</a></li>
