resizing of the different divs

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 </div>
 </div>
 <div class="health5">
-    <h2 class="health0">This is some of the great content in our Resource Center</h2>
+    <h2 class="health0a">This is some of the great content in our Resource Center</h2>
     <p>Learn from experts in digital marketing with access to the content in our Resource Library, including guest articles as well as content from our Summits.</p>
 <div class="container1">
     <div class="box3">
